# trtaj-ego

./: README.md
offboard_sample/: CMakeLists.txt  package.xml
offboard_sample/cfg/: mission_cfg.yaml
offboard_sample/include/offboard_sample/: darc_height_controller.h  offboard_fsm.h  pid.h  pos_controller.h  traj_fsm.h
offboard_sample/launch/: offb_node.launch  offb_node_debug.launch
offboard_sample/scripts/: keyboard.py
offboard_sample/src/: darc_height_controller.cpp  offb_node.cpp  offboard_fsm.cpp  pid.cpp  pos_controller.cpp  traj_fsm.cpp
planner/bspline_opt/src/: bspline_optimizer.cpp
planner/plan_env/: CMakeLists.txt
planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  plan_container.hpp
planner/plan_manage/launch/: advanced_param_gz.xml  default.rviz  gazebo.rviz  run_in_gaze.launch  run_in_gaze2.launch  run_in_real.launch  run_in_real2.launch  rviz2.launch  simple_run.launch
planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp
planner/traj_utils/include/traj_utils/: planning_visualization.h  polynomial_traj.h
planner/traj_utils/src/: polynomial_traj.cpp
